<resources>
    <string name="app_name">太阳健康</string>
    <string name="code">+86</string>
    <string name="phone_number">请输入正确的手机号</string>
    <string name="pin1">请输入验证码</string>
    <string name="pin2">获取验证码</string>
    <string name="login">登录</string>
    <string name="hint">温馨提示：未注册账号的手机号，登录时自动注册，</string>
    <string name="hint2">并代表您已经同意</string>
    <string name="hint3">《用户服务协议》</string>
    <string name="other">第三方登录</string>
    <string name="nickcheng">昵称</string>
    <string name="name">请输入你的昵称</string>
    <string name="age1">请输入你的年龄</string>
    <string name="xuantian">选填</string>
    <string name="height1">请输入你的身高</string>
    <string name="weight1">请输入你的体重</string>
    <string name="place">居住地</string>
    <string name="place1">请选择你的居住地</string>
    <string name="success_tv">愿今后在赚钱这条路上</string>
    <string name="success_tv2">我们与您携手前行！</string>
    <string name="apply">申请销售人员</string>
    <string name="login2">直接登录</string>
    <string name="success_tv3">申请成功</string>
    <string name="apply_suc_tv1">您的资料已经提交成功，工作人员会在</string>
    <string name="apply_suc_tv2">10个工作日内与您联系</string>
    <string name="go_main">前往首页</string>
    <string name="intent">5s后自动跳转</string>
    <string name="apply_suc_tv3">您也可以拨打上海常仁客服电话</string>
    <string name="apply_suc_tv4">400-100-2918</string>
    <string name="apply_suc_tv5">咨询详情</string>
    <string name="bind">绑定</string>
    <string name="apply_sale_tv1">工作性质</string>
    <string name="apply_sale_tv2">同意</string>
    <string name="apply_sale_fuli">《销售人员待遇及福利》</string>
    <string name="apply_sale_tv3">请完善个人信息</string>
    <string name="apply_sale_tv4">姓名</string>
    <string name="apply_sale_tv5">请输入你的真实姓名</string>
    <string name="apply_sale_tv6">身份证号</string>
    <string name="apply_sale_tv7">请输入你的身份证号</string>
    <string name="apply_sale_tv8">提醒：身份验证后不可更改，请谨慎操作</string>
    <string name="apply_sale_tv9">一寸照</string>
    <string name="apply_sale_tv10">身份证正面</string>
    <string name="apply_sale_tv11">身份证反面</string>
    <string name="apply_sale_tv12">所属公司</string>
    <string name="apply_sale_tv13">请选择所属公司</string>
    <string name="person_setting_title">个人中心</string>
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经到底了</string>
    <string name="center">活动中心</string>
    <string name="mycenter">我的活动</string>
    <string name="center_text4">在山西体育馆我们将举行老年活动在山西体育馆我们将举行老年活动在山西体育馆我们将举行老
        年活动在山西体育馆我们将举行老年活动在山西体育馆我们将举行老年活动在山西体育馆我们将举行老年活动在山西体育馆我们将举
        行老年活动在山西体育馆我们将举行老年活动在山西体育馆我们将举行老年活动在山西体育馆我们将举行老年活动在山西体育馆我们将举行老年</string>
    <string name="center_details">活动详情</string>
    <string name="center_details_sign">恭喜你报名成功，请在我的活动中
        查看报名详情</string>
    <string name="problem">常见问题</string>
    <string name="contact">联系我们</string>
    <string name="contact_text1">上海市常仁信息科技有限公司</string>
    <string name="contact_text3">电话：0351-80808085</string>
    <string name="contact_text4">网址：WWW.BAIDU.COM</string>
    <string name="contact_text5">地址：山西太原南内环长风街口</string>
    <string name="setting">更多设置</string>
    <string name="setting_text1">意见反馈</string>
    <string name="setting_text2">清除缓存</string>
    <string name="setting_clean">清除完成</string>
    <string name="setting_text3">版本更新</string>
    <string name="setting_text4">退出登录</string>
    <string name="information_text1">深秋吃什么滋阴润肺</string>
    <string name="information_text2">2016-10-21</string>
    <string name="family">家人</string>
    <string name="family_add_text1">姓名</string>
    <string name="title_rest">我的作息</string>
    <string name="rest_text1">请选择作息分类</string>
    <string name="rest_text2">请选择作息重复</string>
    <string name="rest_text3">请选择提示类型</string>
    <string name="person_text1">请填写昵称</string>
    <string name="person_text2">请填写性别</string>
    <string name="person_text3">请填写年龄</string>
    <string name="person_text4">请填写居住地</string>
    <string name="person_text5">请填写个性签名</string>
    <string name="person_text6">年龄超过限制，请重新输入</string>
    <string name="jsonfail">网络错误</string>
    <string name="sport_success">恭喜您，已完成目标</string>
    <string name="sport_fail">未完成目标</string>
    <string name="setting_hint">输入您要反馈的内容...</string>
    <string name="add_alarm">"添加玲闹钟"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"闹钟"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm">"修改闹钟设置"</string>
    <string name="enable_alarm">"启用闹钟"</string>
    <string name="delete_alarm">"取消闹钟"</string>
    <string name="disable_alarm">"停用闹钟"</string>
    <string name="delete_alarm_confirm">"将会取消此闹钟。"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"时间"</string>
    <string name="set_alarm">"设置闹钟"</string>
    <string name="done">"完成"</string>
    <string name="revert">"取消设置"</string>
    <string name="delete">"删除闹钟"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"闹钟音量"</string>
    <string name="alarm_volume_summary">"设置闹钟音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此闹钟。"</string>
    <string name="alarm_alert_snooze_text">"暂停再响"</string>
    <string name="day">"1 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"永不"</string>
    <string name="day_concat">", "</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
    <string-array name="snooze_duration_entries">
        <item msgid="8337408933053603125">"5 分钟"</item>
        <item msgid="5294206441496024610">"10 分钟"</item>
        <item msgid="2165904039211935470">"15 分钟"</item>
        <item msgid="7248236967714374250">"20 分钟"</item>
        <item msgid="738394723625179423">"25 分钟"</item>
        <item msgid="1180222611308391616">"30 分钟"</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item msgid="3655014754453084122">"5"</item>
        <item msgid="8939029597449573449">"10"</item>
        <item msgid="3922647341176353315">"15"</item>
        <item msgid="5821804105985044459">"20"</item>
        <item msgid="6048861883552402852">"25"</item>
        <item msgid="2740866721232379791">"30"</item>
    </string-array>
    <string name="alarm_klaxon_service_desc">"在 DeskClock 中设置的闹钟铃声播放服务。"</string>
    <string name="main_btn01">首页</string>
    <string name="main_btn02">资讯</string>
    <string name="main_btn03">家庭</string>
    <string name="main_btn04">我的</string>
    <string name="robot">机器人</string>
    <string name="workandrest">计作息</string>
    <string name="chair">听讲座</string>
    <string name="diet">饮食</string>
    <string name="motion">运动</string>
    <string name="lecture">讲座</string>
    <string name="today_sport">今日运动</string>
    <string name="look_over">查看您的体质</string>
    <string name="er_sport_tx">每日运动-健康的必修课</string>
    <string name="second_title_tx2">食材</string>
    <string name="second_title_tx3">食谱</string>
    <string name="kefu_tx">我的客服</string>
    <string name="kefu_tx2">我们将会全心全意为您提供满意周到的咨询服务，也希望您能支持和监督我们的服务！</string>
    <string name="kefu_tx3">拨打客服电话</string>
    <string name="chat_name">张三丰</string>
    <string name="chat_title">内部沟通</string>
    <string name="chat_btn1_tx">最近联系</string>
    <string name="chat_btn2_tx">通讯录</string>
    <string name="unable_connect">当前网络不可用,请检查网络设置</string>
    <string name="Cant_chat_with_yourself">cannot chat with yourself</string>
    <string name="at_your_in_group">%s @ you in group chat</string>
    <string name="emojicon_test_name">Test</string>
    <string name="team_title1">已完成</string>
    <string name="team_title2">待审核</string>
    <string name="team_tx1">共完成</string>
    <string name="team_tx11">笔订单</string>
    <string name="team_tx111">待审核</string>
    <string name="team_tx2">合计</string>
    <string name="team_tx22">元</string>
    <string name="team_tx3">订单编号:65487538552</string>
    <string name="team_tx4">已完成</string>
    <string name="team_tx5">一代机器人</string>
    <string name="team_tx6">¥3999元</string>
    <string name="team_tx7">2017年4月12日</string>
    <string name="team_tx8">销售员:</string>
    <string name="team_tx9">张三</string>
    <string name="shipment_title_tx">出货</string>
    <string name="shipment_bottom_tx">立即发货</string>
    <string name="shipment_order_tx">订单信息</string>
    <string name="shipment_order_bh">订单编号</string>
    <string name="shipment_order_sm">扫描编号</string>
    <string name="shipment_info_kd">快递信息</string>
    <string name="shipment_info_ps">配送方式</string>
    <string name="shipment_info_dh">快递单号</string>
    <string name="shipment_hint_tx2">请输入配送方式</string>
    <string name="new_order_title">新订单</string>
    <string name="new_order_tj">提交订单</string>
    <string name="new_order_hj">合计:</string>
    <string name="new_order_jyfs">交易方式</string>
    <string name="new_order_ddxx">订单信息</string>
    <string name="new_order_cpxh">产品型号</string>
    <string name="new_order_khxx">客户信息</string>
    <string name="new_order_name">姓名</string>
    <string name="new_order_sex">性别</string>
    <string name="new_order_phone">电话</string>
    <string name="new_order_address1">选择地区</string>
    <string name="new_order_address">收货地址</string>
    <string name="new_order_smbh">扫描编号</string>
    <string name="new_setting_tx1">个人资料</string>
    <string name="new_setting_tx2">版本更新</string>
    <string name="new_setting_tx3">关于我们</string>
    <string name="new_setting_tx4">意见反馈</string>
    <string name="new_setting_tx5">清理缓存</string>
    <string name="new_setting_tx6">退出登录</string>
    <string name="edit_person_title">个人资料</string>
    <string name="edit_person_name">昵称</string>
    <string name="edit_person_sex">性别</string>
    <string name="edit_person_age">年龄</string>
    <string name="edit_person_address">居住地</string>
    <string name="order_info_title">订单详情</string>
    <string name="order_info_tx1">订单编号:</string>
    <string name="order_info_tx2">交易方式:</string>
    <string name="order_info_tx3">下单时间:</string>
    <string name="order_info_tx4">订单金额:</string>
    <string name="order_info_tx5">已完成</string>
    <string name="order_info_tx6">订单信息</string>
    <string name="order_info_tx7">产品型号</string>
    <string name="order_info_tx8">产品编号</string>
    <string name="order_info_tx9">客户姓名</string>
    <string name="order_info_tx10">性别</string>
    <string name="order_info_tx11">联系方式</string>
    <string name="order_info_tx12">地址</string>
    <string name="order_info_tx13">配送信息</string>
    <string name="order_info_tx14">发货员</string>
    <string name="order_info_tx15">配送方式</string>
    <string name="order_info_tx16">物流单号</string>
    <string name="me_sport_tx">运动目标-x步</string>
    <string name="mine_collect_title">我的收藏</string>
    <string name="advice_title">感谢您的宝贵意见\n我们会在第一时间给予反馈！</string>
    <string name="advice_type">问题类型</string>
    <string name="advice_type_select">请选择问题类型</string>
    <string name="advice_submit">提交</string>
    <string name="advice_content_hint">请在这里输入你的问题与意见</string>
    <string name="advice_contact_hint">联系电话、QQ（方便我们与您反馈信息）</string>
    <string name="save">保存</string>
    <string name="customer_name">名字 *</string>
    <string name="customer_ed_name">请输入客户名字</string>
    <string name="customer_tel">手机号码 *</string>
    <string name="customer_ed_tel">请输入客户手机号码</string>
    <string name="customer_buy">购买意向 *</string>
    <string name="customer_mark">备注:</string>
    <string name="customer_mark2">* 该客户30天内产生消费则绑定，之后产生所有消费均算入业绩</string>
    <string name="customer_ed_buy">请输入客户购买意向</string>
</resources>