<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/title_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="204px"
        android:layout_gravity="center"
        android:layout_marginTop="182px"
        android:src="@mipmap/success2x" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20px"
        android:text="@string/success_tv3"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_34" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80px"
        android:text="@string/apply_suc_tv1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_28" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20px"
        android:text="@string/apply_suc_tv2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_28" />

    <Button
        android:id="@+id/apply_suc_gomain"
        android:layout_width="598px"
        android:layout_height="84px"
        android:layout_gravity="center"
        android:layout_marginTop="34px"
        android:background="@drawable/btn_radius"
        android:text="@string/go_main"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_36" />

    <TextView
        android:id="@+id/apply_suc_5sintent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20px"
        android:text="@string/intent"
        android:textColor="@color/light_gray2"
        android:textSize="@dimen/text_size_24" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/apply_suc_5sintent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40px">

        <LinearLayout
            android:id="@+id/rela01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/apply_suc_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_suc_tv4"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_28" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_suc_tv5"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_28" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rela01"
            android:layout_centerHorizontal="true"
            android:text="@string/apply_suc_tv3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_28" />
    </RelativeLayout>

</LinearLayout>