<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <ImageView
        android:layout_width="532px"
        android:layout_height="178px"
        android:layout_gravity="center"
        android:layout_marginTop="86px"
        android:src="@mipmap/res_success2x" />

    <ImageView
        android:layout_width="558px"
        android:layout_height="192px"
        android:layout_gravity="center"
        android:layout_marginTop="60px"
        android:src="@mipmap/liucheng2x" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60px"
        android:text="@string/success_tv"
        android:textColor="@color/light_gray2"
        android:textSize="@dimen/text_size_26" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/success_tv2"
        android:textColor="@color/light_gray2"
        android:textSize="@dimen/text_size_26" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="598px"
        android:layout_height="84px"
        android:layout_below="@+id/line2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="102px"
        android:background="@drawable/btn_radius"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_36" />

    <Button
        android:id="@+id/btn_success_login"
        android:layout_width="598px"
        android:layout_height="84px"
        android:layout_below="@+id/line2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="36px"
        android:background="@drawable/btn_stroke_radius"
        android:text="@string/login2"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_38" />
    <ImageView
        android:layout_width="750px"
        android:layout_height="175px"
        android:layout_gravity="center"
        android:layout_marginTop="70px"
        android:src="@mipmap/bj2x" />
</LinearLayout>